--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -62,6 +62,7 @@
     <EditText
         android:id="@+id/name_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext_custom"
@@ -74,6 +75,7 @@
     <EditText
         android:id="@+id/id_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
         android:paddingLeft="10sp"
@@ -114,6 +116,7 @@
     <EditText
         android:id="@+id/password_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:background="@drawable/edittext_custom"
@@ -127,6 +130,7 @@
     <EditText
         android:id="@+id/password_chk_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
@@ -166,6 +170,7 @@
     <EditText
         android:id="@+id/phone_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
@@ -190,6 +195,7 @@
     <EditText
         android:id="@+id/phone_chk_edit"
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:background="@drawable/edittext_custom"
@@ -213,6 +219,7 @@
 
     <Button
         android:layout_height="45dp"
+        android:layout_width="0dp"
         android:id="@+id/joinConfirm"
         android:text="가입완료"
         app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
