--- a/app/src/main/res/layout/mypage_profile.xml
+++ b/app/src/main/res/layout/mypage_profile.xml
@@ -15,8 +15,6 @@
         android:id="@+id/guidelineLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.05"/>
 
@@ -24,8 +22,6 @@
         android:id="@+id/guidelineRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95"/>
 
@@ -62,8 +58,7 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_gravity="center"
-            android:layout_marginLeft="20sp"
-            />
+            android:layout_marginLeft="20sp" />
     </LinearLayout>
 
     <Button
@@ -186,15 +181,13 @@
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
         <ImageView
-                android:layout_width="17sp"
-                android:layout_height="16sp"
+                android:layout_width="24sp"
+                android:layout_height="21sp"
                 android:background="@drawable/next"
                 android:layout_gravity="center"
-                android:layout_marginRight="20sp"
-                />
+                android:layout_marginRight="20sp" />
     </LinearLayout>
 
     <View
@@ -226,8 +219,8 @@
             android:layout_weight="1"
             />
         <ImageView
-            android:layout_width="17sp"
-            android:layout_height="16sp"
+            android:layout_width="24sp"
+            android:layout_height="21sp"
             android:background="@drawable/next"
             android:layout_gravity="center"
             android:layout_marginRight="20sp"
@@ -263,8 +256,8 @@
             android:layout_weight="1"
             />
         <ImageView
-            android:layout_width="17sp"
-            android:layout_height="16sp"
+            android:layout_width="24sp"
+            android:layout_height="21sp"
             android:background="@drawable/next"
             android:layout_gravity="center"
             android:layout_marginRight="20sp"
