--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -54,8 +54,8 @@
 
                 <ImageView
                     android:id="@+id/profileImg"
-                    android:layout_width="100sp"
-                    android:layout_height="100sp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="24dp"
                     android:background="@drawable/profileshape"
