--- a/app/src/main/res/layout/mypage_profile.xml
+++ b/app/src/main/res/layout/mypage_profile.xml
@@ -25,41 +25,30 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95"/>
 
-    <LinearLayout
-        android:id="@+id/layout1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight"
-        android:layout_marginTop="20sp"
-        >
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="70sp"
-            android:layout_height="70sp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/bedge_icon"
             app:civ_border_width="2dp"
             app:civ_border_color="#FFFFFF"
             android:layout_gravity="center"
-            />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
-
-        </LinearLayout>
         <TextView
+            android:id="@+id/textName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="도구리"
             android:textSize="23sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20sp" />
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/profile_image"
+            app:layout_constraintLeft_toLeftOf="@+id/profile_image"
+            app:layout_constraintRight_toRightOf="@+id/profile_image"/>
 
     <Button
         android:id="@+id/edit_btn"
@@ -71,140 +60,122 @@
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginTop="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/layout1"
+        app:layout_constraintTop_toBottomOf="@+id/textName"
         app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
         app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
-
-<!--    밑줄은 액티비티에서. -->
-    <LinearLayout
-        android:id="@+id/layout2"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/edit_btn"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="매너온도"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginTop="6sp" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="right">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="36.7℃"
-                    android:textColor="@color/blue"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="10sp"
-                    android:textSize="18sp" />
-                <ImageView
-                    android:layout_width="28sp"
-                    android:layout_height="28sp"
-                    android:background="@drawable/smile"
-                    />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:max="100"
-        android:progress="50"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:progressDrawable="@drawable/progressbar_progressbar1"
-        android:layout_width="0dp"
-        android:layout_height="22sp"
-        app:layout_constraintTop_toBottomOf="@+id/layout2"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight"
-        android:layout_marginTop="20sp"
-        />
-
-    <LinearLayout
-        android:id="@id/layout3"
-        android:layout_width="match_parent"
-        android:layout_height="80sp"
-        android:background="@color/light_gray"
-        app:layout_constraintTop_toBottomOf="@id/progressbar"
-        android:layout_marginTop="30sp"
-        android:orientation="vertical">
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight">
 
         <TextView
+            android:id="@+id/textManner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="매너온도"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginTop="6sp"
+            app:layout_constraintTop_toTopOf="@+id/constraint"
+            app:layout_constraintLeft_toLeftOf="@+id/constraint"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="36.7℃"
+            android:textColor="@color/blue"
+            android:layout_gravity="right"
+            android:layout_marginRight="10sp"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="@id/imgSmile"
+            app:layout_constraintRight_toLeftOf="@+id/imgSmile"
+            app:layout_constraintBottom_toBottomOf="@+id/imgSmile"/>
+
+        <ImageView
+            android:id="@+id/imgSmile"
+            android:layout_width="28sp"
+            android:layout_height="28sp"
+            android:background="@drawable/smile"
+            app:layout_constraintTop_toTopOf="@+id/textManner"
+            app:layout_constraintBottom_toBottomOf="@+id/textManner"
+            app:layout_constraintRight_toRightOf="@+id/constraint"/>
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:max="100"
+            android:progress="50"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:progressDrawable="@drawable/progressbar_progressbar1"
+            android:layout_width="0dp"
+            android:layout_height="22sp"
+            app:layout_constraintTop_toBottomOf="@+id/textManner"
+            app:layout_constraintLeft_toLeftOf="@+id/constraint"
+            app:layout_constraintRight_toRightOf="@id/constraint"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/constraint"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/constraint">
+
+        <TextView
+            android:id="@+id/textFir"
             android:layout_marginTop="20sp"
             android:layout_marginLeft="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="· 홍은동 10회 인증 (최근30일)"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="@+id/constraint2"
+            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+
         <TextView
+            android:id="@+id/textSec"
             android:layout_marginBottom="20sp"
             android:layout_marginLeft="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="· 최근 3일 이내 활동 (2023년 3월 1일 가입)"
             android:textColor="@color/black"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout4"
-        android:layout_width="0dp"
-        android:layout_height="60sp"
-        app:layout_constraintTop_toBottomOf="@id/layout3"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight">
-
-            <TextView
-                android:layout_gravity="center"
-                android:layout_marginLeft="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="활동 뱃지"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-        <ImageView
-                android:layout_width="24sp"
-                android:layout_height="21sp"
-                android:background="@drawable/next"
-                android:layout_gravity="center"
-                android:layout_marginRight="20sp" />
-    </LinearLayout>
-
-    <View
-        app:layout_constraintTop_toBottomOf="@id/layout4"
-        android:layout_width="match_parent"
-        android:layout_height="2sp"
-        android:background="@color/light_gray"/>
-
-    <LinearLayout
-        android:id="@+id/layout5"
-        android:layout_width="0dp"
-        android:layout_height="60sp"
-        app:layout_constraintTop_toBottomOf="@id/layout4"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight">
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/textFir"
+            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
 
         <TextView
+            android:id="@+id/textBedge"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="활동 뱃지"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/textSec"
+            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+
+        <ImageView
+            android:layout_width="18sp"
+            android:layout_height="18sp"
+            android:background="@drawable/next"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@+id/textBedge"
+            app:layout_constraintRight_toRightOf="@+id/constraint2"
+            app:layout_constraintBottom_toBottomOf="@+id/textBedge"/>
+
+
+        <TextView
+            android:id="@+id/textMatch"
             android:layout_gravity="center"
             android:layout_marginLeft="20sp"
             android:layout_width="wrap_content"
@@ -212,36 +183,21 @@
             android:text="매칭 게시글"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold" />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/textBedge"
+            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+
         <ImageView
-            android:layout_width="24sp"
-            android:layout_height="21sp"
+            android:layout_width="18sp"
+            android:layout_height="18sp"
             android:background="@drawable/next"
             android:layout_gravity="center"
-            android:layout_marginRight="20sp"
-            />
-    </LinearLayout>
+            app:layout_constraintTop_toTopOf="@id/textMatch"
+            app:layout_constraintRight_toRightOf="@+id/constraint2"
+            app:layout_constraintBottom_toBottomOf="@+id/textMatch"/>
 
-    <View
-        app:layout_constraintTop_toBottomOf="@id/layout5"
-        android:layout_width="match_parent"
-        android:layout_height="2sp"
-        android:background="@color/light_gray"/>
-
-    <LinearLayout
-        android:id="@+id/layout6"
-        android:layout_width="0dp"
-        android:layout_height="60sp"
-        app:layout_constraintTop_toBottomOf="@id/layout5"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineRight"
-        >
         <TextView
+            android:id="@+id/textMannerReview"
             android:layout_gravity="center"
             android:layout_marginLeft="20sp"
             android:layout_width="wrap_content"
@@ -249,21 +205,19 @@
             android:text="받은 매너 평가"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold" />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/textMatch"
+            app:layout_constraintLeft_toLeftOf="@id/constraint2"/>
+
         <ImageView
-            android:layout_width="24sp"
-            android:layout_height="21sp"
+            android:layout_width="18sp"
+            android:layout_height="18sp"
             android:background="@drawable/next"
             android:layout_gravity="center"
-            android:layout_marginRight="20sp"
-            />
-    </LinearLayout>
-
+            app:layout_constraintTop_toTopOf="@+id/textMannerReview"
+            app:layout_constraintRight_toRightOf="@id/constraint2"
+            app:layout_constraintBottom_toBottomOf="@+id/textMannerReview"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
